make the issue list not wrap

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
    font-family: monospace;
    color: black;
    font-size: 14px;
+   /*outline: 1px dotted blue;*/
 }
 
 /* use full browser window (might be useless not sure)*/
@@ -10,6 +11,7 @@ html, body {
    height: 100%;
    margin: 0px;
    padding: 0px;
+   overflow-x: scroll;
 }
 
 /* attempt at centering the issue list in the middle of the browser window */
@@ -19,6 +21,8 @@ html, body {
     left: 50%;
     margin-left: -470px; /* compensate for width of issue list */
     margin-top: -150px; /* compensate for height of issue list */
+    display: inline-block;
+    white-space: nowrap;
 }
 
 /* format each issue cover */
